[gd_scene load_steps=38 format=2]

[ext_resource path="res://Scenes/Tool_Weapon.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Assets/tool_indicator.png" type="Texture" id=4]
[ext_resource path="res://Assets/lightbeam.png" type="Texture" id=5]
[ext_resource path="res://Assets/ItemSlot.stylebox" type="StyleBox" id=6]
[ext_resource path="res://Scenes/Menus.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Hotbar.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Slot.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Inventory.gd" type="Script" id=10]
[ext_resource path="res://Assets/fonts/PixelFJVerdana12pt.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Assets/items/equip_suit_slot.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Crafting.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=24]
resource_local_to_scene = true
size = 8
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[sub_resource type="CapsuleShape2D" id=1]
resource_local_to_scene = true
radius = 12.0
height = 32.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 256, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 256, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="Menus" type="CanvasLayer" parent="Camera2D"]
unique_name_in_owner = true
script = ExtResource( 7 )

[node name="GUIs" type="Control" parent="Camera2D/Menus"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Inventory" type="Control" parent="Camera2D/Menus/GUIs"]
unique_name_in_owner = true
margin_top = 100.0
margin_right = 480.0
margin_bottom = 260.0
rect_min_size = Vector2( 160, 160 )
script = ExtResource( 10 )

[node name="InventoryGrids" type="GridContainer" parent="Camera2D/Menus/GUIs/Inventory"]
margin_right = 180.0
margin_bottom = 320.0
rect_min_size = Vector2( 480, 0 )
mouse_filter = 0
custom_constants/vseparation = 6
custom_constants/hseparation = 6
columns = 8

[node name="Slot1" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot2" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 46.0
margin_right = 86.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot3" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 92.0
margin_right = 132.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot4" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 138.0
margin_right = 178.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot5" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 184.0
margin_right = 224.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot6" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 230.0
margin_right = 270.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot7" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 276.0
margin_right = 316.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot8" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 322.0
margin_right = 362.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot9" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_top = 46.0
margin_right = 40.0
margin_bottom = 86.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot10" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 46.0
margin_top = 46.0
margin_right = 86.0
margin_bottom = 86.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot11" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 92.0
margin_top = 46.0
margin_right = 132.0
margin_bottom = 86.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot12" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 138.0
margin_top = 46.0
margin_right = 178.0
margin_bottom = 86.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot13" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 184.0
margin_top = 46.0
margin_right = 224.0
margin_bottom = 86.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot14" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 230.0
margin_top = 46.0
margin_right = 270.0
margin_bottom = 86.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot15" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 276.0
margin_top = 46.0
margin_right = 316.0
margin_bottom = 86.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot16" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 322.0
margin_top = 46.0
margin_right = 362.0
margin_bottom = 86.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot17" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_top = 92.0
margin_right = 40.0
margin_bottom = 132.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot18" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 46.0
margin_top = 92.0
margin_right = 86.0
margin_bottom = 132.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot19" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 92.0
margin_top = 92.0
margin_right = 132.0
margin_bottom = 132.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot20" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 138.0
margin_top = 92.0
margin_right = 178.0
margin_bottom = 132.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot21" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 184.0
margin_top = 92.0
margin_right = 224.0
margin_bottom = 132.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot22" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 230.0
margin_top = 92.0
margin_right = 270.0
margin_bottom = 132.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot23" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 276.0
margin_top = 92.0
margin_right = 316.0
margin_bottom = 132.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Slot24" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/InventoryGrids"]
margin_left = 322.0
margin_top = 92.0
margin_right = 362.0
margin_bottom = 132.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="EquipmentGrids" type="GridContainer" parent="Camera2D/Menus/GUIs/Inventory"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0

[node name="SuitSlot" type="Panel" parent="Camera2D/Menus/GUIs/Inventory/EquipmentGrids"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Icon" type="TextureRect" parent="Camera2D/Menus/GUIs/Inventory/EquipmentGrids/SuitSlot"]
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 5.0
margin_top = 5.0
margin_right = 35.0
margin_bottom = 35.0
texture = ExtResource( 12 )
expand = true

[node name="Hotbar" type="Control" parent="Camera2D/Menus/GUIs"]
unique_name_in_owner = true
margin_right = 400.0
margin_bottom = 80.0
script = ExtResource( 8 )

[node name="HotbarGrids" type="GridContainer" parent="Camera2D/Menus/GUIs/Hotbar"]
margin_top = 40.0
margin_right = 362.0
margin_bottom = 80.0
custom_constants/vseparation = 0
custom_constants/hseparation = 6
columns = 8

[node name="HotbarSlot1" type="Panel" parent="Camera2D/Menus/GUIs/Hotbar/HotbarGrids"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 1
script = ExtResource( 9 )

[node name="HotbarSlot2" type="Panel" parent="Camera2D/Menus/GUIs/Hotbar/HotbarGrids"]
margin_left = 46.0
margin_right = 86.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 1
script = ExtResource( 9 )

[node name="HotbarSlot3" type="Panel" parent="Camera2D/Menus/GUIs/Hotbar/HotbarGrids"]
margin_left = 92.0
margin_right = 132.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 1
script = ExtResource( 9 )

[node name="HotbarSlot4" type="Panel" parent="Camera2D/Menus/GUIs/Hotbar/HotbarGrids"]
margin_left = 138.0
margin_right = 178.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 1
script = ExtResource( 9 )

[node name="HotbarSlot5" type="Panel" parent="Camera2D/Menus/GUIs/Hotbar/HotbarGrids"]
margin_left = 184.0
margin_right = 224.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 1
script = ExtResource( 9 )

[node name="HotbarSlot6" type="Panel" parent="Camera2D/Menus/GUIs/Hotbar/HotbarGrids"]
margin_left = 230.0
margin_right = 270.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 1
script = ExtResource( 9 )

[node name="HotbarSlot7" type="Panel" parent="Camera2D/Menus/GUIs/Hotbar/HotbarGrids"]
margin_left = 276.0
margin_right = 316.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 1
script = ExtResource( 9 )

[node name="HotbarSlot8" type="Panel" parent="Camera2D/Menus/GUIs/Hotbar/HotbarGrids"]
margin_left = 322.0
margin_right = 362.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 1
script = ExtResource( 9 )

[node name="ActiveItemLbl" type="Label" parent="Camera2D/Menus/GUIs/Hotbar"]
margin_right = 360.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 24 )
text = "Item : "
align = 1
valign = 1

[node name="Crafting" type="Control" parent="Camera2D/Menus/GUIs"]
unique_name_in_owner = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -50.0
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 13 )

[node name="CraftGrids" type="GridContainer" parent="Camera2D/Menus/GUIs/Crafting"]
margin_right = 40.0
margin_bottom = 40.0
columns = 6

[node name="Graphic" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="AnimGraphic" type="AnimatedSprite" parent="."]

[node name="Col" type="CollisionShape2D" parent="."]
modulate = Color( 0.12549, 0, 1, 1 )
shape = SubResource( 1 )

[node name="Tool_Weapon" type="Node2D" parent="."]
script = ExtResource( 1 )
swing_time = 0.15

[node name="ToolGraphic" type="Sprite" parent="Tool_Weapon"]
unique_name_in_owner = true
self_modulate = Color( 0.992157, 1, 0, 0.752941 )
texture = ExtResource( 3 )

[node name="AtkCast" type="RayCast2D" parent="Tool_Weapon"]
unique_name_in_owner = true
cast_to = Vector2( 150, 0 )
collision_mask = 0

[node name="AtkLine" type="Line2D" parent="Tool_Weapon"]
unique_name_in_owner = true
points = PoolVector2Array( 0, 0, 40, 0 )
width = 5.0
default_color = Color( 0, 0.952941, 1, 0.784314 )
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="BeamEffect" type="AnimatedSprite" parent="Tool_Weapon"]
self_modulate = Color( 0, 0.952941, 1, 1 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 23 )
frame = 7
playing = true

[node name="AtkArea" type="Area2D" parent="Tool_Weapon"]
unique_name_in_owner = true
position = Vector2( 60, 0 )
z_index = 5
collision_layer = 0
collision_mask = 5

[node name="Col" type="CollisionShape2D" parent="Tool_Weapon/AtkArea"]
shape = SubResource( 2 )

[node name="Indicator" type="Sprite" parent="Tool_Weapon/AtkArea"]
unique_name_in_owner = true
show_behind_parent = true
light_mask = 0
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="SwingTimer" type="Timer" parent="Tool_Weapon"]
one_shot = true

[connection signal="timeout" from="Tool_Weapon/SwingTimer" to="Tool_Weapon" method="_on_SwingTimer_timeout"]
